src/views/NoteEditor/NoteEditor.css
.note-editor{
  margin:0px;
  padding: 8px 12px;
  border-left: 1px solid rgba(228, 128, 128, 0.04);
  border-right: 1px solid rgba(176, 40, 40, 0.06);
  background: linear-gradient(-45deg, rgba(0, 10, 10, 0.1), rgba(10, 0, 0, 0.05));
  border-radius: 30px 60px ;
  display: flex;
  flex-direction: column;
  place-items: center;
  place-content: center;
}

.block{
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  place-items: center;
  place-content: center;
  cursor:grab;
  gap:2.5px;
}



.b-dragger,.b-add,.b-remove{
  opacity: 0;
  padding:2px 2px;
  width: 20px;
  height: 20px;
  transition: 0.2s;
  border-radius: 20px;

}

.b-remove{
  width: 18px;
  height: 18px;
  padding:4px;
}

.b-dragger[enabled=true],.b-add[enabled=true]{
  position: relative;
  z-index: 100;
  opacity: 1 !important;
}


.block:hover > .b-dragger {
  opacity: 0.7;
  cursor:grab;
}

.block:hover > .b-add,.block:hover > .b-remove {
  opacity: 0.7;
  cursor:pointer;
}



.b-dragger:hover,.b-add:hover,.b-remove:hover{
  opacity: 1 !important;
  background-color: rgba(255,255,255,0.1);
}


.block[editable=false] > .b-dragger,.block[editable=false] > .b-add,.block[editable=false] > .b-remove{
 opacity: 0 !important;
 background-color: transparent;
}




.block:hover > input,.block > input:hover,.img:hover,.block:hover > textarea,.block > textarea:hover{
  background-color: rgba(255,255,255,0.02);
}

.block[editable=false] > input:hover,
.block[editable=false] > .img:hover,
.block[editable=false] > textarea:hover,
.kanban[editable=false]:hover{
  background-color: transparent;
  cursor: text;
}

.block > input:focus,.img:focus,.block > textarea:focus{
    background-color: rgba(255,255,255,0.05);
}


.block > input,.block > textarea,.img{
  display: block;
  width: 95%;
  height: 100%;
  border: none;
  outline:none;
  background-color: transparent;
  color:white;
  border-radius: 4px;
  padding: 0px 12px;
  cursor:text;
}

.block > div{
  border: none;
  outline:none;
  background-color: transparent;
  color:white;
  border-radius: 4px;
  cursor:text;
}

.drop-spot{
  width: 100%;
  padding: 10px;
  opacity: 0;
}

.drop-spot-inner{
  width: 100%;
  border-top: 4px solid rgba(91, 91, 91, 0.5);
  border-radius: 8px;
}


[drop-enabled=true]{
  opacity: 1;
}

.separator{
  width: 90%;
  border-radius: 10px;
  border-top: 1.5px solid  rgba(244, 91, 104, 0.25)
}





.block-creator{
  position: absolute;
  top:0;
  left: 0;
  padding:12px ;
  border-radius: 8px;
  background: rgb(16,16,16);
  z-index: 99;
  filter:drop-shadow(0 0 16px rgba(233, 120, 120, 0.1));
  border: 1px solid rgb(30, 30,30);
}

.block-creator > div{
  display:  flex;
  flex-direction: row;
  place-items: center;
  gap:16px;
  padding:4px;
  transition: 0.4s;
  opacity: 0.6;
}

.block-creator > div:hover{
  color:#F45B69;
  background: rgb(26,28,26);
  border-radius: 8px;
  cursor: pointer;
  opacity: 1;
}



.block-creator > div > img{
  width: 25px;
  height: 25px;
  filter:brightness(500%);
  transition: 0.4s;
}

.block-creator > div:hover > img{
  filter:none;
}


.block-creator > div > p{
  padding: 0;
  margin:0;
  font-family: inherit;
  font-size: 15px;
}




.toolbar {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 169px;
    padding-top: 5px;
    padding-bottom: 5px;
    gap:5px;
    background: rgb(16,18,16);
    filter:drop-shadow(0 0 16px rgba(233, 120, 120, 0.1));
    text-align: center;
    color: white;
    border-radius: 8px;
    border: 1px solid rgb(30, 30,30);

    
    transform: translateX(-50%);
  }

  .toolbar >img{
    opacity: 0.7;
    transition: 0.4s;
    cursor: pointer;
  }

  .toolbar > img:hover{
    opacity: 1;
  }

